--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,9 +14,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_pdfview: ^1.3.2
+  flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
   infinite_scroll_pagination: ^4.0.0
-  multi_dropdown: ^2.1.1
   path: ^1.8.3
   path_provider: ^2.1.1
   sqflite: ^2.3.0
