--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,10 +16,13 @@ dependencies:
   flutter_pdfview: ^1.3.2
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
+  hive_flutter: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
+  package_info_plus: ^5.0.1
   path: ^1.8.3
   path_provider: ^2.1.1
   sqflite: ^2.3.0
+  url_launcher: ^6.2.1
 
 dev_dependencies:
   flutter_test:
