--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: allegro_pdf
 description: "Pdf reader optimized for music sheets"
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-version: 1.0.1+2
+version: 1.1.0+3
 
 environment:
   sdk: '>=3.2.0 <4.0.0'
@@ -13,12 +13,15 @@ dependencies:
   flex_color_scheme: ^7.3.1
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   flutter_pdfview: ^1.3.2
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
+  hive: ^2.2.3
   hive_flutter: ^1.1.0
   infinite_scroll_pagination: ^4.0.0
-  package_info_plus: ^5.0.1
+  intl: any
   path: ^1.8.3
   path_provider: ^2.1.1
   sqflite: ^2.3.0
@@ -31,5 +34,5 @@ dev_dependencies:
   flutter_lints: ^3.0.1
 
 flutter:
-
+  generate: true
   uses-material-design: true
